--- a/style.css
+++ b/style.css
@@ -64,10 +64,22 @@ h4 {
 
 .copy_right_footer {
   position: fixed;
-  background: grey;
-  line-height: 3;
-  color: white;
+  background: linear-gradient(rgb(0,255,255) , rgb(0,255,0));
+  color: rgb(255, 0, 0);
   bottom: 0;
   width: 100%;
+  text-align: center;
+  font-family: cursive;
+  font-weight: bolder;
+  font-size: 20px;
+}
+
+.bottom1 {
+  font-size: 28px;
+  width: fit-content;
+  height: fit-content;
+  padding: 10px;
+  background: transparent;
+  font-weight: bolder;
   text-align: center;
 }
